# tasksmith

./: Cargo.toml  LICENSE  README.md  project.norg
src/: app.rs  data.rs  display.rs  event.rs  graph.rs  main.rs  task.rs  tui.rs  update.rs
src/tabs/: list.rs
src/ui/: mod.rs  style.rs  task.rs  taskgraph.rs  tasklist.rs  tree.rs
src/ui/row/: mod.rs  task.rs  text.rs
src/util/: graph.rs
