[package]
name = "tasksmith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["unicode", "derive"] }
color-eyre = "0.6.2"
crossterm = "0.27.0"
ratatui = "0.26.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
struct-patch = "0.4.1"
strum = { version = "0.26.1", features = ["strum_macros"] }
strum_macros = "0.26.1"
uuid = "1.7.0"

[profile.release]
strip = true
lto = true
